test/fail/def-override.grace
constructor new {
  method name {}
}

object {
  inherits new

  def name = object {}
}
